@startuml
'https://plantuml.com/class-diagram



interface Handler<T: ToBytesSerialize> {
    handle(bytes: BytesMut) : Option<T>
}
class NoHandler
class DefaultHandler {
    -sender: tokio::sync::mpsc::Sender<MessageWrapper<T>>
    +new(sender: tokio::sync::mpsc::Sender<MessageWrapper<T>>) : DefaultHandler
}
interface Responder<T>
interface ResponderOnce<T>

Responder -up-|> Fn
ResponderOnce -up-|> FnOnce

NoHandler -down-|> Handler
DefaultHandler --|> Handler
Responder -down-|> Handler
ResponderOnce -down-|> Handler


DefaultHandler .up.> MessageWrapper

class MessageWrapper<T: Debug> {
    +message: T
    +sender: Option<tokio::sync::oneshot::Sender<Option<T>>>
}

interface ProtoBinding<T: ToBytesSerialize + Send, H: Handler<T>> {
    +set_handler(handler: H)
    +listen() : Result<()>
    +receive() : Result<()>
    +send_to(to_send: T, addr: ToSocketAddr) : Result<()>
    +send(to_send: T) : Result<()>
}

interface Protocol<T: ToBytesSerialize + Send, H: Handler<T>, B: ProtoBinding<T, H> + Send> {
    +{static} bind_addr(addr: ToSocketAddr, handler: Option<H>) : Result<B>
    +{static} bind(handler: Option<H>) : Result<B>
}


' TCP ----------------------------------------------------------

class TCP
TCP --|> Protocol

enum TCPBindingMode {
    None
    {field} Connected(TcpStream)
    {field} Listening(Arc<TcpListener>)
}

class TCPBinding<T: ToBytesSerialize + Send, H: Handler<T>> {
    -socket: TcpSocket
    -close_channel: Option<oneshot::Sender<&str>>
    +connect(addr: ToSocketAddr) : Result<()>
    +receive_once(handler_once: ResponderOnce<T>) : Result<()>
    +peers_addr : Result<(SocketAddr, SocketAddr)>
    -get_stream() : Result<TcpStream>
    - {static} read_and_handle_from_stream(stream: TcpStream, handler: Handler<T>) : Result<()>
    - {static} read_from_stream(stream: TcpStream) : Result<BytesMut>
    - {static} write_to_stream(stream: TcpStream, to_write: T) : Result<()>
}
TCPBinding *-down- "1" TCPBindingMode : -mode
TCPBinding *-up- "1" Handler : -Option<handler>

TCPBinding -down-|> ProtoBinding

TCP .up.> TCPBinding


' UDP ----------------------------------------------------------

class UDP
UDP --|> Protocol


class UDPBinding<T: ToBytesSerialize + Send, H: Handler<T>> {
    -socket: UdpSocket
    -ignore_list: HashSet<SocketAddr>
    +broadcast(data: T, dest_port: u16) : Result<()>
    +ignore(addr: ToSocketAddr) : Result<()>
    +stop_ignoring(addr: ToSocketAddr) : Result<()>
    - {static} send_to(socket: UdpSocket, to_send: T, addr: ToSocketAddr) : Result<()>
    - {static} receive_and_handle_from(socket: UdpSocket, handler: Handler<T>, ignore: HashSet<SocketAddr>) : Result<()>
}

UDPBinding *-up- "1" Handler : -Option<handler>

UDPBinding --|> ProtoBinding

UDP .up.> UDPBinding


' UNIX ----------------------------------------------------------

class Unix
Unix --|> Protocol

enum UnixBindingMode {
    None
    {field} Connected(UnixStream)
    {field} Listening(Arc<UnixListener>)
}

class UnixBinding<T: ToBytesSerialize + Send, H: Handler<T>> {
    -path: PathBuf
    -close_channel: Option<oneshot::Sender<&str>>
    +connect() : Result<()>
    -get_stream() : Result<UnixStream>
    - {static} read_and_handle_from_stream(stream: UnixStream, handler: Handler<T>) : Result<()>
    - {static} read_from_stream(stream: UnixStream) : Result<BytesMut>
    - {static} write_to_stream(stream: UnixStream, to_write: T) : Result<()>
}
UnixBinding *-- "1" UnixBindingMode : -mode
UnixBinding *-up- "1" Handler : -Option<handler>

UnixBinding -down-|> ProtoBinding

Unix .up.> UnixBinding

' pour briller dans ce monde
TCPBinding -[hidden]d-> UnixBinding
UDPBinding -[hidden]d-> TCPBinding

@enduml